# holmes

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.dev  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/actions/: README.md  __init__.py  base.py  high_timeouts_action.py  registry.py  revenue_action.py  traffic_action.py
